--- a/LAB 1/q10.ipynb
+++ b/LAB 1/q10.ipynb
@@ -9,17 +9,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Satyam\n"
+     ]
+    }
+   ],
    "source": [
-    "string = input(\"Enter a string: \")\n",
+    "s = input(\"Enter a string: \")\n",
+    "result = \"\"\n",
     "\n",
-    "# Capitalize first letter of each word\n",
-    "capitalized = string.title()\n",
+    "for word in s.split():\n",
+    "    result += word[0].upper() + word[1:].lower() + \" \"\n",
     "\n",
-    "print(f\"Original string: {string}\")\n",
-    "print(f\"Capitalized string: {capitalized}\")"
+    "print(result.strip())\n"
    ]
   }
  ],
@@ -30,8 +38,16 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
-   "version": "3.8.0"
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.11"
   }
  },
  "nbformat": 4,
