--- a/LAB 2/q11.ipynb
+++ b/LAB 2/q11.ipynb
@@ -11,11 +11,20 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Original: satyam\n",
+      "Opposite case: SATYAM\n"
+     ]
+    }
+   ],
    "source": [
     "char = input(\"Enter an alphabet: \")\n",
     "\n",
-    "# Convert to opposite case\n",
+    "\n",
     "if char.isupper():\n",
     "    result = char.lower()\n",
     "else:\n",
@@ -33,8 +42,16 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
-   "version": "3.8.0"
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.11"
   }
  },
  "nbformat": 4,
