--- a/LAB 1/q1.ipynb
+++ b/LAB 1/q1.ipynb
@@ -14,9 +14,9 @@
    "outputs": [],
    "source": [
     "# Assign different types of values\n",
-    "name = \"Alice\"\n",
-    "age = 25\n",
-    "height = 5.8\n",
+    "name = \"Satyam\"\n",
+    "age = 21\n",
+    "height = 5.11\n",
     "is_student = True\n",
     "marks = [85, 90, 78]\n",
     "\n",
@@ -80,7 +80,7 @@
   },
   "language_info": {
    "name": "python",
-   "version": "3.8.0"
+   "version": "3.10.11"
   }
  },
  "nbformat": 4,
