--- a/LAB 2/q14.ipynb
+++ b/LAB 2/q14.ipynb
@@ -9,9 +9,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Choose conversion:\n",
+      "1) Binary\n",
+      "2) Octal\n",
+      "3) Hexadecimal\n",
+      "Binary: 10000\n"
+     ]
+    }
+   ],
    "source": [
     "decimal = int(input(\"Enter a decimal number: \"))\n",
     "\n",
@@ -22,18 +34,28 @@
     "\n",
     "choice = int(input(\"Enter your choice (1-3): \"))\n",
     "\n",
-    "# Switch case using match-case (Python 3.10+) or if-elif\n",
     "if choice == 1:\n",
-    "    result = bin(decimal)[2:]  # Remove '0b' prefix\n",
-    "    print(f\"Binary: {result}\")\n",
+    "    n = decimal\n",
+    "    result = \"\"\n",
+    "\n",
+    "    if n == 0:\n",
+    "        print(\"Binary: 0\")\n",
+    "    else:\n",
+    "        while n > 0:\n",
+    "            rem = n % 2\n",
+    "            result += str(rem)\n",
+    "            n = n // 2\n",
+    "\n",
+    "        binary = result[::-1]\n",
+    "        print(\"Binary:\", binary)\n",
+    "\n",
     "elif choice == 2:\n",
-    "    result = oct(decimal)[2:]  # Remove '0o' prefix\n",
-    "    print(f\"Octal: {result}\")\n",
+    "    pass\n",
+    "\n",
     "elif choice == 3:\n",
-    "    result = hex(decimal)[2:]  # Remove '0x' prefix\n",
-    "    print(f\"Hexadecimal: {result}\")\n",
+    "   pass\n",
     "else:\n",
-    "    print(\"Invalid choice!\")"
+    "    print(\"Invalid choice!\")\n"
    ]
   }
  ],
@@ -44,8 +66,16 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
-   "version": "3.8.0"
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.11"
   }
  },
  "nbformat": 4,
