--- a/LAB 2/q15.ipynb
+++ b/LAB 2/q15.ipynb
@@ -9,46 +9,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Guess the number between 1 and 100!\n",
+      "Too low! Try again.\n",
+      "Too high! Try again.\n",
+      "Too low! Try again.\n",
+      "Too high! Try again.\n",
+      "Too low! Try again.\n",
+      "Too low! Try again.\n",
+      "Too low! Try again.\n",
+      "Too low! Try again.\n",
+      "Too low! Try again.\n",
+      "Too low! Try again.\n",
+      "Too low! Try again.\n",
+      "Too low! Try again.\n",
+      "Too high! Try again.\n",
+      "Too high! Try again.\n",
+      "Too high! Try again.\n",
+      "Correct! You guessed it!\n"
+     ]
+    }
+   ],
    "source": [
     "import random\n",
     "\n",
-    "# Generate random number between 1 and 100\n",
-    "secret_number = random.randint(1, 100)\n",
-    "attempts = 0\n",
-    "max_attempts = 7\n",
+    "number = random.randint(1, 100)\n",
     "\n",
-    "print(\"Welcome to the Number Guessing Game!\")\n",
-    "print(f\"I'm thinking of a number between 1 and 100. You have {max_attempts} attempts.\")\n",
+    "print(\"Guess the number between 1 and 100!\")\n",
     "\n",
-    "while attempts < max_attempts:\n",
-    "    try:\n",
-    "        guess = int(input(f\"\\nAttempt {attempts + 1}: Enter your guess: \"))\n",
-    "        attempts += 1\n",
-    "        \n",
-    "        if guess == secret_number:\n",
-    "            print(f\"🎉 Congratulations! You guessed it in {attempts} attempts!\")\n",
-    "            break\n",
-    "        elif guess < secret_number:\n",
-    "            print(\"Too low! Try a higher number.\")\n",
-    "        else:\n",
-    "            print(\"Too high! Try a lower number.\")\n",
-    "        \n",
-    "        # Show remaining attempts\n",
-    "        remaining = max_attempts - attempts\n",
-    "        if remaining > 0:\n",
-    "            print(f\"You have {remaining} attempts left.\")\n",
-    "        \n",
-    "    except ValueError:\n",
-    "        print(\"Please enter a valid number!\")\n",
-    "        attempts -= 1  # Don't count invalid input as attempt\n",
+    "while True:\n",
+    "    guess = int(input(\"Enter your guess: \"))\n",
     "\n",
-    "else:\n",
-    "    print(f\"\\n😞 Game Over! The number was {secret_number}.\")\n",
-    "\n",
-    "print(\"Thanks for playing!\")"
+    "    if guess > number:\n",
+    "        print(\"Too high! Try again.\")\n",
+    "    elif guess < number:\n",
+    "        print(\"Too low! Try again.\")\n",
+    "    else:\n",
+    "        print(\"Correct! You guessed it!\")\n",
+    "        break\n"
    ]
   }
  ],
@@ -59,8 +63,16 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
-   "version": "3.8.0"
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.11"
   }
  },
  "nbformat": 4,
