--- a/LAB 1/q1.ipynb
+++ b/LAB 1/q1.ipynb
@@ -13,14 +13,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Assign different types of values\n",
     "name = \"Satyam\"\n",
     "age = 21\n",
     "height = 5.11\n",
     "is_student = True\n",
     "marks = [85, 90, 78]\n",
     "\n",
-    "# Print all variables\n",
     "print(\"Variables:\")\n",
     "print(f\"name: {name}\")\n",
     "print(f\"age: {age}\")\n",
@@ -35,13 +33,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Display types of all variables\n",
     "print(\"Variable types:\")\n",
-    "print(f\"type(name): {type(name)}\")\n",
-    "print(f\"type(age): {type(age)}\")\n",
-    "print(f\"type(height): {type(height)}\")\n",
-    "print(f\"type(is_student): {type(is_student)}\")\n",
-    "print(f\"type(marks): {type(marks)}\")"
+    "print(type(name))\n",
+    "print(type(age))\n",
+    "print(type(height))\n",
+    "print(type(is_student))\n",
+    "print(type(marks))"
    ]
   },
   {
@@ -50,10 +47,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Delete a particular variable\n",
     "del height\n",
-    "print(\"After deleting 'height' variable:\")\n",
-    "print(\"Available variables:\", [var for var in locals() if not var.startswith('_')])"
+    "print(\"After deleting height variable\")"
    ]
   },
   {
@@ -62,7 +57,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Assign two integer variables and compare\n",
     "num1 = 15\n",
     "num2 = 20\n",
     "print(f\"num1 = {num1}, num2 = {num2}\")\n",
