--- a/LAB 3/q2.ipynb
+++ b/LAB 3/q2.ipynb
@@ -15,22 +15,13 @@
     }
    ],
    "source": [
-    "# Q.2) Write a python program to check whether a specific number is available within a list or\n",
-    "# not. If it is found, then display its position.\n",
+    "lst = [1, 2, 3, 4, 5, 6, 7, 8, 9, 4, 5, 7, 4, 3, 6, 7]\n",
+    "n = int(input(\"Enter number to search: \"))\n",
     "\n",
-    "list1=[1,2,3,4,5,6,7,8,9,4,5,7,4,3,6,7]\n",
-    "n= int(input(\"enter the number to be searched:\"))\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "for i in list1:\n",
-    "    if n in list1:\n",
-    "        print(f\"Element found in the list! Index=\",i)\n",
-    "        break\n",
-    "    else:print(\"Element not found!\")\n",
-    "              \n",
-    "\n"
+    "if n in lst:\n",
+    "    print(f\"Element found at index: {lst.index(n)}\")\n",
+    "else:\n",
+    "    print(\"Element not found!\")"
    ]
   }
  ],
