--- a/LAB 5/q1.ipynb
+++ b/LAB 5/q1.ipynb
@@ -7,33 +7,32 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Define the Box class\n",
     "class Box:\n",
     "    def __init__(self, length, width, height):\n",
-    "        \n",
     "        self.length = length\n",
     "        self.width = width\n",
     "        self.height = height\n",
     "    \n",
     "    def volume(self):\n",
-    "        \n",
     "        return self.length * self.width * self.height\n",
     "\n",
-    "\n",
-    "# Create an object of the Box class\n",
     "box1 = Box(5, 4, 3)\n",
-    "\n",
-    "# Print the volume\n",
     "print(f\"Length: {box1.length}\")\n",
     "print(f\"Width: {box1.width}\")\n",
     "print(f\"Height: {box1.height}\")\n",
-    "print(f\"Volume of the box: {box1.volume()} cubic units\")"
+    "print(f\"Volume: {box1.volume()} cubic units\")"
    ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "name": "python",
+   "version": "3.10.11"
   }
  },
  "nbformat": 4,
