--- a/LAB 5/q3.ipynb
+++ b/LAB 5/q3.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "e0606ca3",
+   "metadata": {},
+   "source": [
+    "# Q.3) Binary tree with operations"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "423be1a7",
