--- a/LAB 5/q1.ipynb
+++ b/LAB 5/q1.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "b54c428c",
+   "metadata": {},
+   "source": [
+    "# Q.1) Box class with volume calculation"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "92657fd8",
