--- a/LAB 6/q2.ipynb
+++ b/LAB 6/q2.ipynb
@@ -10,10 +10,68 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "3078ed6b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Array:\n",
+      "[[ 96   2  59  23  26]\n",
+      " [ 69  67   2  30 100]\n",
+      " [ 45  75  39  34  75]\n",
+      " [ 61  87  25  75  75]\n",
+      " [ 40   6  42  10  41]\n",
+      " [  8  88  64  38  78]\n",
+      " [ 16  15  44  72  28]\n",
+      " [  4  66  98  24  79]\n",
+      " [ 55  82  34  72  99]\n",
+      " [ 57  40  21  87  43]]\n",
+      "\n",
+      "Sum of odd numbers: 1272\n",
+      "Sum of even numbers: 1244\n",
+      "Sum of diagonal elements: 318\n",
+      "\n",
+      "Transpose:\n",
+      "[[ 96  69  45  61  40   8  16   4  55  57]\n",
+      " [  2  67  75  87   6  88  15  66  82  40]\n",
+      " [ 59   2  39  25  42  64  44  98  34  21]\n",
+      " [ 23  30  34  75  10  38  72  24  72  87]\n",
+      " [ 26 100  75  75  41  78  28  79  99  43]]\n",
+      "\n",
+      "Rows 2-6:\n",
+      "[[ 69  67   2  30 100]\n",
+      " [ 45  75  39  34  75]\n",
+      " [ 61  87  25  75  75]\n",
+      " [ 40   6  42  10  41]\n",
+      " [  8  88  64  38  78]]\n",
+      "\n",
+      "After multiplying rows 2-6 by -1:\n",
+      "[[  96    2   59   23   26]\n",
+      " [ -69  -67   -2  -30 -100]\n",
+      " [ -45  -75  -39  -34  -75]\n",
+      " [ -61  -87  -25  -75  -75]\n",
+      " [ -40   -6  -42  -10  -41]\n",
+      " [  -8  -88  -64  -38  -78]\n",
+      " [  16   15   44   72   28]\n",
+      " [   4   66   98   24   79]\n",
+      " [  55   82   34   72   99]\n",
+      " [  57   40   21   87   43]]\n",
+      "\n",
+      "Flattened rows 2-6: [ 69  67   2  30 100  45  75  39  34  75  61  87  25  75  75  40   6  42\n",
+      "  10  41   8  88  64  38  78]\n",
+      "Sum of all elements: 2516\n",
+      "Mean: 50.32\n",
+      "Median: 44.5\n",
+      "Standard Deviation: 28.62197756969284\n",
+      "Flattened and sorted: [  2   2   4   6   8  10  15  16  21  23  24  25  26  28  30  34  34  38\n",
+      "  39  40  40  41  42  43  44  45  55  57  59  61  64  66  67  69  72  72\n",
+      "  75  75  75  75  78  79  82  87  87  88  96  98  99 100]\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "\n",
@@ -45,8 +103,22 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.11"
   }
  },
  "nbformat": 4,
